# ghost-buster

./: .vimrc  CMakeLists.txt  Makefile  check-matrix.cpp  main.cpp
gmyhwh/: baseline-3balls.matrix  baseline-3balls.parm  scm-3balls-alt.matrix  scm-3balls-alt.parm  scm-3balls.matrix  scm-3balls.parm  scm-4balls.matrix  scm-4balls.parm
include/: dihedral.hpp  gnuplot.hpp  minuit.hpp  perm_matrix.hpp
include/boson/: 2balls.hpp  3balls.hpp  4balls.hpp  fcn.hpp  matrix.hpp  measure.hpp  model_io.hpp  models.hpp  permutations.hpp  states.hpp
minuit/: CMakeLists.txt  Makefile  mnderi.F
minuit/minuit/: d506cm.inc
src/: boson-fcn.cpp  cellular_universe.cpp  matrix.cpp  models.cpp  permutations.cpp  spatsym_matrix.cpp
yhwh/: 1.parm  baseline-3balls.matrix  baseline-3balls.parm  baseline-4balls.matrix  baseline-4balls.parm  scm-3balls-sym12.parm  scm-3balls-sym13.parm  scm-3balls-sym4.parm  scm-3balls.matrix  scm-3balls.parm  scm-4balls.matrix  scm-4balls.parm
